--- a/index.css
+++ b/index.css
@@ -37,6 +37,15 @@ padding-bottom: 20px;
 .clear{
 clear: both;
 }
+input {
+border: 0px;
+background-color: transparent;
+font-size: 48pt;
+width: 600px;
+font-family: "Helvetica Neue";
+color: #444;
+font-weight: 300;
+}
 
 .line.light {
 border-bottom: 1px solid #626262;
